--- a/index.html
+++ b/index.html
@@ -3,87 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>뿌슝뿌슝 - 캐릭터 애니메이션</title>
+    <title>뿌슝뿌슝</title>
+    <!-- Font Awesome 아이콘 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
-        body {
+        * {
             margin: 0;
-            padding: 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        html, body {
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            background: #000;
         }
 
         #canvas-container {
-            background: white;
-            border-radius: 10px;
-            box-shadow: 0 10px 40px rgba(0,0,0,0.3);
-            padding: 20px;
-            margin-bottom: 20px;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
-        #controls {
-            background: rgba(255,255,255,0.95);
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 5px 20px rgba(0,0,0,0.2);
-            max-width: 600px;
-        }
-
-        h1 {
-            margin: 0 0 10px 0;
-            color: #333;
-            text-align: center;
-        }
-
-        .key-guide {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-            gap: 10px;
-            margin-top: 15px;
-        }
-
-        .key-item {
-            background: #f0f0f0;
-            padding: 10px;
-            border-radius: 5px;
-            text-align: center;
-            transition: all 0.3s ease;
-        }
-
-        .key-item:hover {
-            background: #667eea;
-            color: white;
-            transform: translateY(-2px);
-        }
-
-        .key {
-            display: inline-block;
-            background: #333;
-            color: white;
-            padding: 5px 10px;
-            border-radius: 3px;
-            font-weight: bold;
-            margin-right: 5px;
-        }
-
-        .status {
-            margin-top: 15px;
-            padding: 10px;
-            background: #e8f4f8;
-            border-left: 4px solid #667eea;
-            border-radius: 3px;
-        }
-
-        .warning {
-            background: #fff3cd;
-            border-left-color: #ffc107;
-            padding: 10px;
-            margin-top: 10px;
-            border-radius: 3px;
+        canvas {
+            display: block;
         }
     </style>
 </head>
@@ -92,62 +38,22 @@
         <!-- p5.js canvas will be inserted here -->
     </div>
 
-    <div id="controls">
-        <h1>뿌슝뿌슝 캐릭터 애니메이션</h1>
-        <p style="text-align: center; color: #666;">게임 콤보 시스템 테스트</p>
-
-        <div style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); padding: 15px; border-radius: 8px; margin-bottom: 15px; text-align: center; color: white; font-weight: bold; font-size: 18px;">
-            <span class="key" style="background: white; color: #667eea; font-size: 20px;">A</span> 콤보 공격 (오른손→왼손→어퍼컷) &nbsp;&nbsp;
-            <span class="key" style="background: rgba(255,255,255,0.3); font-size: 16px;">R</span> 리셋
-        </div>
-
-        <div class="key-guide">
-            <div class="key-item">
-                <span class="key">1</span> Idle
-            </div>
-            <div class="key-item">
-                <span class="key">2</span> 달리기
-            </div>
-            <div class="key-item">
-                <span class="key">3</span> 오른손 펀치
-            </div>
-            <div class="key-item">
-                <span class="key">4</span> 왼손 펀치
-            </div>
-            <div class="key-item">
-                <span class="key">5</span> 어퍼컷
-            </div>
-            <div class="key-item">
-                <span class="key">6</span> 점프 펀치
-            </div>
-            <div class="key-item">
-                <span class="key">7</span> 데미지
-            </div>
-            <div class="key-item">
-                <span class="key">8</span> 사망
-            </div>
-        </div>
-
-        <div class="status">
-            <strong>현재 상태:</strong> <span id="current-state">RUN</span><br>
-            <strong>현재 프레임:</strong> <span id="current-frame">0</span><br>
-            <strong>다음 콤보:</strong> <span id="combo-count">오른손 펀치 (1/3)</span><br>
-            <strong>입력 상태:</strong> <span id="input-status" style="color: #4caf50;">✓ 공격 가능</span>
-        </div>
-
-        <div class="warning" id="sprite-warning" style="display: none;">
-            ⚠️ 스프라이트를 찾을 수 없습니다. README의 다운로드 가이드를 참고하세요.
-        </div>
-    </div>
-
     <!-- p5.js CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/addons/p5.sound.min.js"></script>
 
     <!-- 프로젝트 스크립트 -->
+    <script src="js/musicConfig.js"></script>
     <script src="js/spriteConfig.js"></script>
     <script src="js/SpriteSheet.js"></script>
     <script src="js/AnimationManager.js"></script>
     <script src="js/Character.js"></script>
+    <script src="js/Wall.js"></script>
+    <script src="js/WallManager.js"></script>
+    <script src="js/MusicManager.js"></script>
+    <script src="js/ScoreManager.js"></script>
+    <script src="js/RankingManager.js"></script>
+    <script src="js/LyricsManager.js"></script>
     <script src="js/sketch.js"></script>
 </body>
 </html>
