--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <script src="js/musicConfig.js"></script>
     <script src="js/spriteConfig.js"></script>
     <script src="js/SpriteSheet.js"></script>
+    <script src="js/SpriteLoader.js"></script>
     <script src="js/AnimationManager.js"></script>
     <script src="js/Character.js"></script>
     <script src="js/Wall.js"></script>
