--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <script src="js/ScoreManager.js"></script>
     <script src="js/RankingManager.js"></script>
     <script src="js/LyricsManager.js"></script>
+    <script src="js/HitSoundManager.js"></script>
     <script src="js/sketch.js"></script>
 </body>
 </html>
