--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <script src="js/RankingManager.js"></script>
     <script src="js/LyricsManager.js"></script>
     <script src="js/HitSoundManager.js"></script>
+    <script src="js/InfoManager.js"></script>
     <script src="js/sketch.js"></script>
 </body>
 </html>
